--- a/test/test.html
+++ b/test/test.html
@@ -101,9 +101,9 @@
             </section>
 
             <section id='section-mix'>
-                <textarea name='simple-mix'>[[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
-                <textarea name='mix'>
-                  [[{"id":101, "value":"cartman", "title":"Eric Cartman"}]] and [[{"id":500, "value":"cartman", "title":"xxx"}]] [[kyle]] do not know [[homer simpson]] because he's a relic.]]
+                <textarea name='simple-mix' placeholder="type something">[[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
+                <textarea name='mix' placeholder="type something">
+                  [[{"id":101, "value":"cartman", "title":"Eric Cartman", "prefix":"@"}]] and [[{"id":500, "value":"cartman", "title":"xxx", "prefix":"@"}]] [[kyle]] do not know [[homer simpson]] because he's a relic.]]
                 </textarea>
             </section>
 
@@ -142,15 +142,15 @@
 
   window.tagified = {
     "basic"             : 1,
-    "textarea"          : 1,
+    "textarea"          : 0,
     "mix"               : 1,
-    "manual-suggestions": 1,
-    "outside-of-the-box": 1,
-    "advance-options"   : 1,
-    "extra-properties"  : 1,
-    "readonly"          : 1,
-    "readonly-mixed"    : 1,
-    "mode-select"       : 1,
+    "manual-suggestions": 0,
+    "outside-of-the-box": 0,
+    "advance-options"   : 0,
+    "extra-properties"  : 0,
+    "readonly"          : 0,
+    "readonly-mixed"    : 0,
+    "mode-select"       : 0,
   };
 
   (function(){
@@ -166,10 +166,12 @@
     var sectionElm = document.querySelector('#section-basic');
 
     new Tagify(sectionElm.querySelector('input[name=value_empty_JSON]'), {
+        addTagOnBlur: false,
         autoComplete : {
             rightKey:true
         },
         dropdown: {
+            enabled: 1,
             mapValueTo: "email"
         },
         whitelist: [
@@ -186,7 +188,8 @@
 
 
     var tagify3 = new Tagify(sectionElm.querySelector('input[name=value_JSON]'), {
-      delimiters: ",|[\\n\\r]"
+      delimiters: ",|[\\n\\r]",
+      addTagOnBlur: false
     })
 
     // should allow adding multiple tags as 1 string with new lines
@@ -210,7 +213,7 @@
   tagify.on('add', onAddTag)
         .on('remove', onRemoveTag)
         .on('input', onInput)
-        .on('edit', onTagEdit)
+        .on('edit:input edit:updated edit:start edit:keydown', e => console.log(e.type, e))
         .on('invalid', onInvalidTag)
         .on('click', onTagClick)
         .on('focus', onTagifyFocusBlur)
@@ -255,10 +258,6 @@
             // render the suggestions dropdown
             tagify.dropdown.show.call(tagify, e.detail.value);
         })
-    }
-
-    function onTagEdit(e){
-        console.log("onTagEdit: ", e.detail);
     }
 
     // invalid tag added callback
@@ -373,14 +372,16 @@
           mode             : 'mix',  // <--  Enable mixed-content
           pattern          : /@|#/,  // <--  Tag words which start with @ or # (can be a String instead of Regex)
           enforceWhitelist : true,
+          duplicates       : true,
           whitelist        : [       // <--  Set the initial whitelist, which will dynamically change as you type (see "input" event below)
-            { value:'cartman', title:'Eric Cartman', class:'borderd-blue' },
-            { value:"cartman", id:500, title:"xxx" },
-            { value:'kyle', title:'Kyle Broflovski' },
-            { value:'Homer simpson' }
+            { value:'cartman', title:'Eric Cartman', class:'borderd-blue', prefix:'@' },
+            { value:"cartman", id:500, title:"xxx", prefix:'@' },
+            { value:'kyle', title:'Kyle Broflovski', prefix:'@' },
+            { value:'Homer simpson', prefix:'#' }
           ],
           dropdown   : {
-              enabled : 0
+              enabled : 0,
+              maxItems: 20
           },
           callbacks        : {
             add    : console.log,  // callback when adding a tag
