--- a/test/test.html
+++ b/test/test.html
@@ -262,6 +262,8 @@
 
     // invalid tag added callback
     function onInvalidTag(e){
+      console.log( e.detail )
+      debugger;
         console.log("onInvalidTag: ", e.detail);
     }
 
