--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                     <details>
                       <summary></summary>
                     <h3>HTML</h3>
-<pre class="language-markup"><code>&gt;input name='tags-manual-suggestions' placeholder='write some tags'></code></pre>
+<pre class="language-markup"><code>&lt;input name='tags-manual-suggestions' placeholder='write some tags'></code></pre>
                     <h3>JAVASCRIPT</h3>
                     <script>renderPRE(document.currentScript, "manualSuggestions")</script>
                     <h3>CSS</h3>
