--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                     <h2><a href='#section-extra-properties'>#</a>Tags with properties</h2>
                     <p>
                         Some cases requires more control per-tag, for exmaple, sending a different value to the server than the textual value
-                        the user sees/enetered. Another example, would be different colors for different tags or tags' groups.
+                        the user sees/entered. Another example, would be different colors for different tags or tags' groups.
                         it's possible to add any number of properties per tag, the only constant is the <code>value</code> property which
                         must be declared per-tag, and that will be the rendered text.
                     </p>
