- fixes #369 - added "tagify--noTags" class to the main scope when needed - "invalid" event is now triggered *after* the invalid tag has been added to the DOM - added "getCSSVars" method which for now only reads the (new) "--tag-hide-transition" CSS variable and parses it, so the value is used in the "removeTag" method as timeout duration.

--- a/test/test.html
+++ b/test/test.html
@@ -241,8 +241,8 @@
 
   // tag remvoed callback
   function onRemoveTag(e){
-      console.log(e.detail);
-      console.log("tagify instance value:", tagify.value)
+      console.log("Tag removed:", e.detail);
+      console.log("tagify instance value:", tagify.value, tagify.getTagElms())
   }
 
   // on character(s) added/removed (user is typing/deleting)
