--- a/test/test.html
+++ b/test/test.html
@@ -142,15 +142,15 @@
 
   window.tagified = {
     "basic"             : 1,
-    "textarea"          : 0,
+    "textarea"          : 1,
     "mix"               : 1,
-    "manual-suggestions": 0,
-    "outside-of-the-box": 0,
-    "advance-options"   : 0,
-    "extra-properties"  : 0,
-    "readonly"          : 0,
-    "readonly-mixed"    : 0,
-    "mode-select"       : 0,
+    "manual-suggestions": 1,
+    "outside-of-the-box": 1,
+    "advance-options"   : 1,
+    "extra-properties"  : 1,
+    "readonly"          : 1,
+    "readonly-mixed"    : 1,
+    "mode-select"       : 1,
   };
 
   (function(){
@@ -241,8 +241,8 @@
 
   // tag remvoed callback
   function onRemoveTag(e){
-      console.log(e.detail);
-      console.log("tagify instance value:", tagify.value)
+      console.log("Tag removed:", e.detail);
+      console.log("tagify instance value:", tagify.value, tagify.getTagElms())
   }
 
   // on character(s) added/removed (user is typing/deleting)
@@ -262,6 +262,8 @@
 
     // invalid tag added callback
     function onInvalidTag(e){
+      console.log( e.detail )
+      debugger;
         console.log("onInvalidTag: ", e.detail);
     }
 
