--- a/test/test.html
+++ b/test/test.html
@@ -91,7 +91,7 @@
     <body>
         <form>
             <section id='section-basic'>
-                <input name='tags' class='some_class_name' placeholder='write some tags' value='xxx' autofocus data-blacklist='.NET,PHP'>
+                <input name='tags' class='some_class_name' placeholder='write some tags' value='"xxx"' autofocus data-blacklist='.NET,PHP'>
                 <input name='value_empty_JSON' class='value_empty_JSON' value='[]'>
                 <input name='value_JSON' class='value_JSON' value='[{"value":"foo"}, {"value":"bar", "title":"xxx"}]'>
             </section>
