--- a/test/test.html
+++ b/test/test.html
@@ -16,6 +16,13 @@
                 max-width:600px;
             }
 
+            .tagify+input, .tagify+textarea {
+                display: initial!important;
+                width: 100%;
+                margin-top: -1.5em;
+                min-height:11ch;
+            }
+
             .tagify{
                 min-width:400px;
                 margin: 1.5em 0;
@@ -141,16 +148,16 @@
   document.forms[0].reset()
 
   window.tagified = {
-    "basic"             : 1,
-    "textarea"          : 1,
+    "basic"             : 0,
+    "textarea"          : 0,
     "mix"               : 1,
-    "manual-suggestions": 1,
-    "outside-of-the-box": 1,
-    "advance-options"   : 1,
-    "extra-properties"  : 1,
-    "readonly"          : 1,
-    "readonly-mixed"    : 1,
-    "mode-select"       : 1,
+    "manual-suggestions": 0,
+    "outside-of-the-box": 0,
+    "advance-options"   : 0,
+    "extra-properties"  : 0,
+    "readonly"          : 0,
+    "readonly-mixed"    : 0,
+    "mode-select"       : 0,
   };
 
   (function(){
