--- a/test/test.html
+++ b/test/test.html
@@ -99,7 +99,7 @@
             <section id='section-basic'>
                 <input name='tags' class='some_class_name' placeholder='write some tags' value='"xxx"' autofocus data-blacklist='.NET,PHP'>
                 <input name='value_empty_JSON' class='value_empty_JSON' value='[]'>
-                <input name='value_JSON' class='value_JSON' value='[{"value":"foo", "editable":false}, {"value":"bar", "title":"xxx"}]'>
+                <input name='value_JSON' class='value_JSON' value='[{"value":1, "editable":false}, {"value":2, "title":"xxx"}]'>
             </section>
 
             <section id='section-textarea'>
