--- a/test/test.html
+++ b/test/test.html
@@ -148,15 +148,15 @@
 
   window.tagified = {
     "basic"             : 1,
-    "textarea"          : 0,
-    "mix"               : 0,
-    "manual-suggestions": 0,
-    "outside-of-the-box": 0,
-    "advance-options"   : 0,
-    "extra-properties"  : 0,
-    "readonly"          : 0,
-    "readonly-mixed"    : 0,
-    "mode-select"       : 0,
+    "textarea"          : 1,
+    "mix"               : 1,
+    "manual-suggestions": 1,
+    "outside-of-the-box": 1,
+    "advance-options"   : 1,
+    "extra-properties"  : 1,
+    "readonly"          : 1,
+    "readonly-mixed"    : 1,
+    "mode-select"       : 1,
   };
 
   (function(){
@@ -226,14 +226,14 @@
         // whitelist: [].concat(whitelist)
     })
 
-    tagify.addTags( `a,a,b,a,a` )
+    tagify.addTags( `a,a` )
 
 
   // Chainable event listeners
   tagify.on('add', onAddTag)
         .on('remove', onRemoveTag)
         .on('input', onInput)
-       // .on('edit:beforeUpdate', onPreUpdate)
+        .on('edit:beforeUpdate', onPreUpdate)
         .on('edit:start edit:keydown click', saveCaretPos)
         .on('edit:input edit:updated edit:start', e => console.log(e.type, e))
         .on('invalid', onInvalidTag)
@@ -299,7 +299,7 @@
 
     // invalid tag added callback
     function onInvalidTag(e){
-      console.log("onInvalidTag: ", e.detail);
+        console.log("onInvalidTag: ", e.detail);
     }
 
     // invalid tag added callback
