--- a/test/test.html
+++ b/test/test.html
@@ -147,9 +147,9 @@
   document.forms[0].reset()
 
   window.tagified = {
-    "basic"             : 0,
+    "basic"             : 1,
     "textarea"          : 0,
-    "mix"               : 1,
+    "mix"               : 0,
     "manual-suggestions": 0,
     "outside-of-the-box": 0,
     "advance-options"   : 0,
@@ -220,8 +220,9 @@
 
     // init Tagify script on the above inputs
     var tagify = new Tagify(input, {
-        pattern: /^[A-Za-z_✲ "]$/,
+        pattern: /^[A-Za-z_✲ "]+$/,
         editTags : 1,
+        duplicates: false,
         keepInvalidTags: true
         // after 2 characters typed, all matching values from this list will be suggested in a dropdown
         // whitelist: [].concat(whitelist)
