bugfix - in mix-mode the text-nodes where not normalized on initial parsing, which had lead to tags being deleted when deleted the the last character of the input, in the string after the last tag (using backspace)

--- a/test/test.html
+++ b/test/test.html
@@ -109,7 +109,7 @@
             <section id='section-mix'>
                 <textarea name='simple-mix' placeholder="type something">and[[   [[alice]] text [[bob]] [[foo]], [[alice]], [[foo]]</textarea>
                 <textarea name='mix' placeholder="type something">
-                  [[{"id":101, "value":"cartman", "title":"Eric Cartman", "prefix":"@"}]] and [[{"id":500, "value":"cartman", "title":"xxx", "prefix":"@"}]] [[kyle]] do not know [[homer simpson]] because he's a r]]
+                  [[{"id":101, "value":"cartman", "title":"Eric Cartman", "prefix":"@"}]] and [[{"id":500, "value":"cartman", "title":"xxx", "prefix":"@"}]] [[kyle]] do not know [[homer simpson]] because he's a
                 </textarea>
             </section>
 
