--- a/test/test.html
+++ b/test/test.html
@@ -20,7 +20,9 @@
                 display: initial!important;
                 width: 100%;
                 margin-top: -1.5em;
-                min-height:11ch;
+                min-height: 11ch;
+                background: powderblue;
+                font-family: "Fira Code";
             }
 
             .tagify{
@@ -147,16 +149,16 @@
   document.forms[0].reset()
 
   window.tagified = {
-    "basic"             : 1,
-    "textarea"          : 1,
     "mix"               : 1,
-    "manual-suggestions": 1,
-    "outside-of-the-box": 1,
-    "advance-options"   : 1,
-    "extra-properties"  : 1,
-    "readonly"          : 1,
-    "readonly-mixed"    : 1,
-    "mode-select"       : 1,
+    "basic"             : 1,
+    "textarea"          : 0,
+    "manual-suggestions": 0,
+    "outside-of-the-box": 0,
+    "advance-options"   : 0,
+    "extra-properties"  : 0,
+    "readonly"          : 0,
+    "readonly-mixed"    : 0,
+    "mode-select"       : 0,
   };
 
   (function(){
@@ -267,7 +269,7 @@
   }
 
   function onPreUpdate(e){
-    insertNodeAtSelection('😀', cachedSelection.anchorNode, cachedSelection.anchorOffset)
+    //insertNodeAtSelection('😀', cachedSelection.anchorNode, cachedSelection.anchorOffset)
     console.log("onPreUpdate", cachedSelection)
   }
 
@@ -391,6 +393,10 @@
 
 <script data-name='mix'>
   tagified["mix"] && (function(){
+  function delay(ms) {
+    return new Promise(resolve => setTimeout(resolve, ms));
+  }
+
   var simpleMixInput = document.querySelector('[name="simple-mix"]')
 
   var settings = {
@@ -424,7 +430,7 @@
             { value:'Homer simpson', prefix:'#' }
           ],
           dropdown   : {
-              enabled : 0,
+              enabled : 1,
               maxItems: 20,
               position: "text",
               highlightFirst: true
@@ -481,9 +487,12 @@
   var whitelist_2 = ['Homer simpson', 'Marge simpson', 'Bart', 'Lisa', 'Maggie', 'Mr. Burns', 'Ned', 'Milhouse', 'Moe'];
 
   // A good place to pull server suggestion list accoring to the prefix/value
-  tagify.on('input', function(e){
+  tagify.on('input', async function(e){
     var prefix = e.detail.prefix,
         newWhitelist;
+
+    // tagify.settings.whitelist.length = 0;
+    // await delay(1500)
 
     if( prefix ){
       if( prefix == '@' )
@@ -495,7 +504,7 @@
         tagify.settings.whitelist.splice(0, newWhitelist.length, ...newWhitelist)
       }
 
-      if( e.detail.value.length > 1 )
+      if( e.detail.value.length >= tagify.settings.dropdown.enabled )
           tagify.dropdown.show.call(tagify, e.detail.value);
     }
 
@@ -536,7 +545,8 @@
           whitelist           : ["temple","stun","detective","sign","passion","routine","deck","discriminate","relaxation","fraud","attractive","soft","forecast","point","thank","stage","eliminate","effective","flood","passive","skilled","separation","contact","compromise","reality","district","nationalist","leg","porter","conviction","worker","vegetable","commerce","conception","particle","honor","stick","tail","pumpkin","core","mouse","egg","population","unique","behavior","onion","disaster","cute","pipe","sock","dialect","horse","swear","owner","cope","global","improvement","artist","shed","constant","bond","brink","shower","spot","inject","bowel","homosexual","trust","exclude","tough","sickness","prevalence","sister","resolution","cattle","cultural","innocent","burial","bundle","thaw","respectable","thirsty","exposure","team","creed","facade","calendar","filter","utter","dominate","predator","discover","theorist","hospitality","damage","woman","rub","crop","unpleasant","halt","inch","birthday","lack","throne","maximum","pause","digress","fossil","policy","instrument","trunk","frame","measure","hall","support","convenience","house","partnership","inspector","looting","ranch","asset","rally","explicit","leak","monarch","ethics","applied","aviation","dentist","great","ethnic","sodium","truth","constellation","lease","guide","break","conclusion","button","recording","horizon","council","paradox","bride","weigh","like","noble","transition","accumulation","arrow","stitch","academy","glimpse","case","researcher","constitutional","notion","bathroom","revolutionary","soldier","vehicle","betray","gear","pan","quarter","embarrassment","golf","shark","constitution","club","college","duty","eaux","know","collection","burst","fun","animal","expectation","persist","insure","tick","account","initiative","tourist","member","example","plant","river","ratio","view","coast","latest","invite","help","falsify","allocation","degree","feel","resort","means","excuse","injury","pupil","shaft","allow","ton","tube","dress","speaker","double","theater","opposed","holiday","screw","cutting","picture","laborer","conservation","kneel","miracle","brand","nomination","characteristic","referral","carbon","valley","hot","climb","wrestle","motorist","update","loot","mosquito","delivery","eagle","guideline","hurt","feedback","finish","traffic","competence","serve","archive","feeling","hope","seal","ear","oven","vote","ballot","study","negative","declaration","particular","pattern","suburb","intervention","brake","frequency","drink","affair","contemporary","prince","dry","mole","lazy","undermine","radio","legislation","circumstance","bear","left","pony","industry","mastermind","criticism","sheep","failure","chain","depressed","launch","script","green","weave","please","surprise","doctor","revive","banquet","belong","correction","door","image","integrity","intermediate","sense","formal","cane","gloom","toast","pension","exception","prey","random","nose","predict","needle","satisfaction","establish","fit","vigorous","urgency","X-ray","equinox","variety","proclaim","conceive","bulb","vegetarian","available","stake","publicity","strikebreaker","portrait","sink","frog","ruin","studio","match","electron","captain","channel","navy","set","recommend","appoint","liberal","missile","sample","result","poor","efflux","glance","timetable","advertise","personality","aunt","dog"],
           transformTag        : transformTag,
           dropdown : {
-              enabled: 3,
+              enabled: 0,
+              position: 'text'
           }
       })
 
