--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,7 @@
         <title>Tagify - pupetteer tests</title>
         <meta name="description" content="Converts HTML input/textarea into Tags component">
         <meta name="author" content="Yair Even-Or">
-
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="../dist/tagify.css">
 
         <script src="../dist/tagify.js"></script>
