--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Tagify - demo</title>
         <meta name="description" content="Converts HTML input/textarea into Tags component">
         <meta name="author" content="Yair Even-Or">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="dist/tagify.css">
         <style>
