--- a/index.html
+++ b/index.html
@@ -336,9 +336,11 @@
                     <h2><a href='#section-input'>#</a>text input</h2>
                     <h3>In this example:</h3>
                     <ul>
-                        <li>Tagify instance with settings (whitelist sugegstions)</li>
-                        <li>Simulate fetching whitelist (from a server) as the user is typing</li>
-                        <li>Remove all tags from an extrenal button</li>
+                        <li>Tagify instance with initial <em>settings</em> Object</li>
+                        <li>Only allow tags from the whitelist to exist</li>
+                        <li>Manually create initial <em>whitelist</em> from the original input's value</li>
+                        <li>Simulate fetching <em>whitelist</em> (from a server) as the user is typing</li>
+                        <li>"Remove all tags" by an extrenal button</li>
                         <li>Listen to various Tagify <a href='https://github.com/yairEO/tagify#events'>events</a></li>
                         <li>Un-listen to specific event (see <code>onAddTag</code> function)</li>
                     </ul>
@@ -889,14 +891,17 @@ new Tagify(input)
 
 <script data-name="input">
 (function(){
-var input = document.querySelector('input[name=input]'),
+var inputElm = document.querySelector('input[name=input]'),
     whitelist = ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"];
 
+
 // initialize Tagify on the above input node reference
-var tagify = new Tagify(input, {
-    // after 2 characters typed, all matching values from this list will be suggested in a dropdown
-    // whitelist: [].concat(whitelist)
+var tagify = new Tagify(inputElm, {
+    enforceWhitelist: true,
+    whitelist: inputElm.value.trim().split(/\s*,\s*/) // Array of values. stackoverflow.com/a/43375571/104380
 })
+
+
 
 // "remove all tags" button event listener
 document.querySelector('.tags--removeAllBtn')
@@ -927,7 +932,7 @@ var mockAjax = (function mockAjax(){
 // tag added callback
 function onAddTag(e){
     console.log("onAddTag: ", e.detail);
-    console.log("original input value: ", input.value)
+    console.log("original input value: ", inputElm.value)
     tagify.off('add', onAddTag) // exmaple of removing a custom Tagify event
 }
 
@@ -945,10 +950,11 @@ function onInput(e){
     // get new whitelist from a delayed mocked request (Promise)
     mockAjax()
         .then(function(result){
-            // https://stackoverflow.com/q/30640771/104380
-            // replace tagify "whitelist" array values with new values (result)
-            tagify.settings.whitelist.splice(0, result.length, ...result)
-            // render the suggestions dropdown. "newValue" is when "input" event is called while editing a tag
+            // replace tagify "whitelist" array values with new values
+            // and add back the ones already choses as Tags
+            tagify.settings.whitelist.push(...result, ...tagify.value)
+
+            // render the suggestions dropdown.
             tagify.loading(false).dropdown.show.call(tagify, e.detail.value);
         })
 }
